--- a/app/src/main/res/layout/fragment_picture_of_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_day.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Connection error"
+        android:text="@string/text_connection_error"
         android:textColor="@android:color/holo_red_light"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/try_again_button"
@@ -30,7 +30,7 @@
         android:id="@+id/try_again_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Try again"
+        android:text="@string/button_try_again"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
