Commit N7. Add files.

--- a/app/src/main/res/layout/item_asteroid.xml
+++ b/app/src/main/res/layout/item_asteroid.xml
@@ -5,15 +5,9 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/dateOfGroupAsteroids"
+        android:id="@+id/textAsteroid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        />
 
 </LinearLayout>
