Commit N12. For start date fragment.

--- a/app/src/main/res/layout/fragment_picture_of_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_day.xml
@@ -37,6 +37,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+<Button
+    android:id="@+id/buttonShowAsteroidsByDate"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:text="даты"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
