Commit N14. All works!

--- a/app/src/main/res/layout/fragment_asteroids_by_date.xml
+++ b/app/src/main/res/layout/fragment_asteroids_by_date.xml
@@ -25,11 +25,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDate"
-        android:textColor="@color/app_background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/textViewDescriptionDateAsteroids"
-        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
