--- a/app/src/main/res/layout/fragment_asteroids_by_date.xml
+++ b/app/src/main/res/layout/fragment_asteroids_by_date.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fragment_date_background">
 
     <ImageView
         android:id="@+id/imageRadarAsteroids"
@@ -21,6 +22,8 @@
         android:layout_marginTop="10dp"
         android:text="@string/text_description_date_asteroids"
         android:textAlignment="center"
+        android:textColor="@color/text_grey"
+        android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/imageRadarAsteroids" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -29,6 +32,7 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/textViewDescriptionDateAsteroids"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
