--- a/app/src/main/res/layout/item_date_asteroids.xml
+++ b/app/src/main/res/layout/item_date_asteroids.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:textColor="@color/default_text_color"
         android:textStyle="bold" />
 
 </LinearLayout>
