--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,36 +4,33 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <!-- Картинка дня -->
-        <ImageView
-            android:id="@+id/imageViewPictureOfDay"
+        <FrameLayout
+            android:id="@+id/picture_of_day_container"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/picture_of_day" />
+            android:contentDescription="@string/picture_of_day"/>
 
-        <!-- Кнопка для перехода на AsteroidsByDateFragment -->
         <Button
             android:id="@+id/buttonAsteroidsByDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageViewPictureOfDay"
+            app:layout_constraintTop_toBottomOf="@id/picture_of_day_container"
             android:text="Перейти к астероидам по дате" />
 
-        <!-- Кнопка для перехода на WebViewFragment -->
         <Button
-            android:id="@+id/buttonWebView"
+            android:id="@+id/buttonAboutApp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/buttonAsteroidsByDate"
-            android:text="Открыть WebView" />
-
-
+            android:text="@string/text_view_aboutapp_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
