--- a/app/src/main/res/layout/fragment_picture_of_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_day.xml
@@ -8,8 +8,8 @@
         android:id="@+id/imagePictureOfDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:contentDescription="@string/picture_of_day"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,14 +36,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-<Button
-    android:id="@+id/buttonShowAsteroidsByDate"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:text="даты"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
