--- a/app/src/main/res/layout/fragment_details_asteroid.xml
+++ b/app/src/main/res/layout/fragment_details_asteroid.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/fragment_date_background">
 
     <ImageView
         android:id="@+id/imageHazardous"
@@ -17,49 +18,118 @@
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/text_grey"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageHazardous"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageHazardous" />
 
     <TextView
         android:id="@+id/textViewId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewName"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewName" />
 
     <TextView
         android:id="@+id/textViewAbsoluteMagnitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewId"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewId" />
 
     <TextView
         android:id="@+id/textViewEstimatedDiameter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewAbsoluteMagnitude"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewAbsoluteMagnitude" />
 
     <TextView
         android:id="@+id/textViewRelativeVelocity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewEstimatedDiameter"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewEstimatedDiameter" />
 
     <TextView
         android:id="@+id/textViewDistanceFromEarth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewRelativeVelocity"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewRelativeVelocity" />
 
     <TextView
         android:id="@+id/textViewIsPotentiallyHazardous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="50dp"
+        android:textColor="@color/default_text_color"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewDistanceFromEarth"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewDistanceFromEarth" />
+
+    <LinearLayout
+        android:id="@+id/buttonsLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/buttonBackDetails"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/button_border"
+            android:text="@string/button_back"
+            android:textColor="@color/default_text_color"
+            android:textColorLink="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="@+id/buttonsLinearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/buttonHomeDetails"
+            app:layout_constraintStart_toStartOf="@+id/buttonsLinearLayout"
+            app:rippleColor="#FFFFFF"
+            app:strokeColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/buttonHomeDetails"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/button_border"
+            android:text="@string/button_home"
+            android:textColor="@color/default_text_color"
+            android:textColorLink="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="@+id/buttonsLinearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/buttonsLinearLayout"
+            app:layout_constraintStart_toStartOf="@+id/buttonBackDetails"
+            app:rippleColor="#FFFFFF"
+            app:strokeColor="#FFFFFF"
+            />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
