--- a/app/src/main/res/layout/item_date_asteroids.xml
+++ b/app/src/main/res/layout/item_date_asteroids.xml
@@ -9,6 +9,7 @@
         android:id="@+id/dateOfGroupAsteroids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:textSize="20sp"
         android:textColor="@color/default_text_color"
         android:textStyle="bold" />
