Commit N22. Firebase Realtime Database.

--- a/app/src/main/res/layout/fragment_discovery_asteroids.xml
+++ b/app/src/main/res/layout/fragment_discovery_asteroids.xml
@@ -5,7 +5,9 @@
     android:background="@color/fragment_date_background">
 
     <WebView
+        android:id="@+id/webViewDiscovery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/app_background" />
 
 </FrameLayout>
