--- a/app/src/main/res/layout/fragment_group_of_asteroids.xml
+++ b/app/src/main/res/layout/fragment_group_of_asteroids.xml
@@ -29,11 +29,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewGroupAsteroids"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectDateGroupAsteroids" />
 
