--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,9 +15,6 @@
         <action
             android:id="@+id/action_detailsAsteroidFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
-        <action
-            android:id="@+id/action_detailsAsteroidFragment_to_groupOfAsteroidsFragment"
-            app:destination="@id/groupOfAsteroidsFragment" />
     </fragment>
     <fragment
         android:id="@+id/asteroidsByDateFragment"
@@ -27,10 +24,6 @@
             android:id="@+id/action_asteroidsByDateFragment_to_groupOfAsteroidsFragment"
             app:destination="@id/groupOfAsteroidsFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/pictureOfDayFragment"
-        android:name="by.vjacheslavkovalenko.aboutasteroidstms.ui.pictureofday.PictureOfDayFragment"
-        android:label="PictureOfDayFragment" />
     <fragment
         android:id="@+id/groupOfAsteroidsFragment"
         android:name="by.vjacheslavkovalenko.aboutasteroidstms.ui.groupasteroid.GroupOfAsteroidsFragment"
@@ -49,5 +42,26 @@
         <action
             android:id="@+id/action_mainFragment_to_aboutAppFragment"
             app:destination="@id/aboutAppFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_discoveryAsteroidsFragment"
+            app:destination="@id/discoveryAsteroidsFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_discoveryAsteroidsFragment2"
+            app:destination="@id/discoveryAsteroidsFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_whatAsteroidFragment"
+            app:destination="@id/whatAsteroidFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/discoveryAsteroidsFragment"
+        android:name="by.vjacheslavkovalenko.aboutasteroidstms.ui.DiscoveryAsteroidsFragment"
+        android:label="DiscoveryAsteroidsFragment" />
+    <fragment
+        android:id="@+id/pictureOfDayFragment"
+        android:name="by.vjacheslavkovalenko.aboutasteroidstms.ui.pictureofday.PictureOfDayFragment"
+        android:label="PictureOfDayFragment" />
+    <fragment
+        android:id="@+id/whatAsteroidFragment"
+        android:name="by.vjacheslavkovalenko.aboutasteroidstms.ui.WhatAsteroidFragment"
+        android:label="WhatAsteroidFragment" />
 </navigation>
