--- a/app/src/main/res/layout/fragment_details_asteroid.xml
+++ b/app/src/main/res/layout/fragment_details_asteroid.xml
@@ -88,37 +88,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDistanceFromEarth" />
 
-    <LinearLayout
-        android:id="@+id/buttonsLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/buttonBackDetails"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginBottom="50dp"
             android:layout_weight="1"
             android:background="@drawable/button_border"
             android:text="@string/button_back"
             android:textColor="@color/default_text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:textColorLink="#FFFFFF" />
 
-        <Button
-            android:id="@+id/buttonHomeDetails"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_border"
-            android:text="@string/button_home"
-            android:textColor="@color/default_text_color"
-            android:textColorLink="#FFFFFF" />
 
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
