Commit N30. After defense diplom.

--- a/app/src/main/res/layout/fragment_what_asteroid.xml
+++ b/app/src/main/res/layout/fragment_what_asteroid.xml
@@ -8,6 +8,7 @@
         android:id="@+id/webViewWhatAsteroid"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@color/app_background"
         app:layout_constraintBottom_toTopOf="@id/buttonBackWhatAsteroid"/>
 
