--- a/app/src/main/res/layout/fragment_discovery_asteroids.xml
+++ b/app/src/main/res/layout/fragment_discovery_asteroids.xml
@@ -6,6 +6,7 @@
 
     <WebView
         android:id="@+id/webViewDiscovery"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/app_background"
