--- a/app/src/main/res/layout/fragment_details_asteroid.xml
+++ b/app/src/main/res/layout/fragment_details_asteroid.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageHazardous"
         android:layout_width="wrap_content"
         android:layout_height="320dp"
+        android:contentDescription="@string/picture_hazardous"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
