--- a/app/src/main/res/layout/fragment_group_of_asteroids.xml
+++ b/app/src/main/res/layout/fragment_group_of_asteroids.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageGroupAsteroids"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:contentDescription="@string/picture_group"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,8 +32,10 @@
         android:id="@+id/recyclerViewGroupAsteroids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/buttonBackGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectDateGroupAsteroids" />
