--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background">
+    android:background="@color/background_nasa">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieLogoIcon"
@@ -74,4 +74,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="#FFFFFF"
         app:strokeColor="#FFFFFF" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
