--- a/app/src/main/res/layout/fragment_discovery_asteroids.xml
+++ b/app/src/main/res/layout/fragment_discovery_asteroids.xml
@@ -2,13 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/app_background">
 
     <WebView
         android:id="@+id/webViewDiscovery"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/app_background"
         app:layout_constraintBottom_toTopOf="@id/buttonBackDiscoveryAsteroids"/>
 
@@ -20,6 +24,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:background="@drawable/button_border"
+        android:textColor="@color/default_text_color"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
