--- a/app/src/main/res/layout/item_asteroid.xml
+++ b/app/src/main/res/layout/item_asteroid.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textAsteroid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:textColor="@color/default_text_color" />
 
 </LinearLayout>
